  special classloaders to isolate the engines. This allows the engine
  to be easily run in a debugger. This is primarily a tool for
  debugging The Grinder engine, but it might also be useful to
  advanced users.

  More relaxed handling of invalid dates in Cookies. Requested by Martin
  Wagner.

  Nicer output for ConnectExceptions and UnknownHost exceptions. (Bug 927828).


Grinder 3.0-beta27
------------------

  The TCPProxy is now relaxed about empty query strings. Thanks to
  John Sinclair for the suggestion.

  Updates to the Spanish translation from Jose Antonio Zapata.

  New Polish translation from KArol Muszynski.

  New Italian translation from Meo Bogliolo.

  The documentation sources are now hosted on SourceForge CVS, and are
  no longer part of the source distribution. See
  http://sourceforge.net/cvs/?group_id=18598.

  Modify HTTPClient code so that HTTPResponse.getText() works with
  more content types. (Bug 1297821).

  Fix out of date documentation references to getIndexForLong (it has
  been renamed to getLongIndex). Thanks to Dietrich Bollmann for the
  report.


Grinder 3.0-beta26
------------------

  The Grinder now requires J2SE 1.4.

  The console now displays agent process status.

  Fix the TCPProxy to cope correctly with 8 bit strings in all
  locales (Bug 1167731). Thanks to Anton Malykh for the report.

  Fix a bug where system properties specified on the command line were
  incorrectly quoted when building the worker process command line.
  Thanks to Dietrich Bollmann for the report.

  Be more strict about matching line endings in the HTTP TCPProxy
  filters. Previously there was a platform specific bug. Thanks to
  Alex Bolgarov for the report.

  Change to the script API: getGrinderID() has been renamed
  getProcessName().

  Correct SSL documentation - The Grinder does not support the
  javax.net.ssl.* system properties.

  Fix to the JMS receiver example from Dietrich Bollmann: use a queue